<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/question_linear_layout">

            <TextView
                style="@style/question_textviews"
                android:text="@string/what_is_subsistence_farming" />

            <RadioGroup
                android:id="@+id/q_one_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q_one_a"
                    style="@style/radio_buttons"
                    android:layout_marginTop="10dp"
                    android:onClick="questionOneAnswered"
                    android:text="@string/farming_that_focuses_on_feeding_the_family_and_making_money" />

                <RadioButton
                    android:id="@+id/q_one_b"
                    style="@style/radio_buttons"
                    android:layout_marginTop="2dp"
                    android:onClick="questionOneAnswered"
                    android:text="@string/farming_that_uses_environment_friendly_techniques" />

                <RadioButton
                    android:id="@+id/q_one_c"
                    style="@style/radio_buttons"
                    android:layout_marginTop="2dp"
                    android:onClick="questionOneAnswered"
                    android:text="@string/farming_where_the_farmer_produces_food_for_others_to_live_on" />

                <RadioButton
                    android:id="@+id/q_one_d"
                    style="@style/radio_buttons"
                    android:layout_marginTop="2dp"
                    android:onClick="questionOneAnswered"
                    android:text="@string/farming_that_grows_organic_food" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkbox_question"
            style="@style/question_linear_layout">

            <TextView
                style="@style/question_textviews"
                android:text="@string/the_major_small_ruminants_reared_in_nigeria_are" />

            <CheckBox
                android:id="@+id/q_two_a"
                style="@style/checkbox_answers"
                android:onClick="questionTwoAnswered"
                android:text="@string/goat" />

            <CheckBox
                android:id="@+id/q_two_b"
                style="@style/checkbox_answers"
                android:onClick="questionTwoAnswered"
                android:text="@string/pig" />

            <CheckBox
                android:id="@+id/q_two_c"
                style="@style/checkbox_answers"
                android:onClick="questionTwoAnswered"
                android:text="@string/cattle" />

            <CheckBox
                android:id="@+id/q_two_d"
                style="@style/checkbox_answers"
                android:onClick="questionTwoAnswered"
                android:text="@string/sheep" />

        </LinearLayout>

        <LinearLayout style="@style/question_linear_layout">

            <TextView
                style="@style/question_textviews"
                android:text="@string/the_animals_produced_by_mating_of_two_different_breeds_of_the_same_species_is_known_as" />

            <RadioGroup
                android:id="@+id/q_three_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q_three_a"
                    style="@style/radio_buttons"
                    android:onClick="questionThreeAnswered"
                    android:text="@string/mixed_breed" />

                <RadioButton
                    android:id="@+id/q_three_b"
                    style="@style/radio_buttons"
                    android:onClick="questionThreeAnswered"
                    android:text="@string/cross_breed" />

                <RadioButton
                    android:id="@+id/q_three_c"
                    style="@style/radio_buttons"
                    android:onClick="questionThreeAnswered"
                    android:text="@string/exotic_breed" />

                <RadioButton
                    android:id="@+id/q_three_d"
                    style="@style/radio_buttons"
                    android:onClick="questionThreeAnswered"
                    android:text="@string/pure_breed" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/question_linear_layout">

            <TextView
                style="@style/question_textviews"
                android:text="@string/what_is_the_advantage_of_using_crop_rotation" />

            <RadioGroup
                android:id="@+id/q_four_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q_four_a"
                    style="@style/radio_buttons"
                    android:onClick="questionFourAnswered"
                    android:text="@string/it_helps_the_farmers_make_more_money" />

                <RadioButton
                    android:id="@+id/q_four_b"
                    style="@style/radio_buttons"
                    android:onClick="questionFourAnswered"
                    android:text="@string/it_lets_the_nutrients_in_the_soil_replenish" />

                <RadioButton
                    android:id="@+id/q_four_c"
                    style="@style/radio_buttons"
                    android:onClick="questionFourAnswered"
                    android:text="@string/keeps_the_land_in_good_condition" />

                <RadioButton
                    android:id="@+id/q_four_d"
                    style="@style/radio_buttons"
                    android:onClick="questionFourAnswered"
                    android:text="@string/all_of_the_above" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/question_linear_layout">

            <TextView
                style="@style/question_textviews"
                android:text="@string/a_type_of_chemical_that_kills_weeds_is" />

            <EditText
                android:id="@+id/q_five_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/type_here"
                android:inputType="text" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="14dp"
                android:background="#00c853"
                android:onClick="submitAnswersTapped"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>